# weatherinfo_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: check_envs.zsh  requirements.txt  test_NWS_API.ipynb  test_agent.ipynb
src/weatherinfo_mcp/: __init__.py
src/weatherinfo_mcp/core/: nws_location_service.py
src/weatherinfo_mcp/mcp_tools/: main.py  nws_weather_tools.py
test_results/: comprehensive_conformance_report.txt
tests/: Makefile  README.md  comprehensive_stdio_tests.py  requirements-framework.txt  simple_stdio_test.py  stdio_mcp_conformance_framework.py  test_error_handling.py  test_nws_location_service.py  test_nws_weather_tools.py  test_session_lifecycle.py
